--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ width: 500px;
 
 <script>
 $(document).ready(function(){
-  $("button").click(function(){
+  $("#button1").click(function(){
     $(this).hide();
   });
 });
@@ -151,7 +151,7 @@ $(document).ready(function(){
 By: Kevin E Morales</p>
 </div>
 <div class="buttonn">
-<button id="button1" "buttoncolor">Click here to disappear.</button>
+<button id="button1">Click here to disappear.</button>
 </div>
 <br>
 <div class="container">
