--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@ body{
 background-color:#F8F8FF;
 }
 .buttonn {
-text-align: center;
-margin-right: auto;
-margin-left: auto;
-padding: 10px;
-color: white;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
 }
 .buttoncolor { 
 color: white;
@@ -39,6 +37,10 @@ table {
 .p1 {
 margin: auto;
 width: 700px;
+}
+.p2 {
+margin: auto;
+width: 500px;
 }
 p {
 background-color: white;
@@ -130,14 +132,31 @@ margin-left: auto;
 margin-right: auto;
 width: 500px;
 }
+#hide {
+padding: 5px;
+background-color: white;
+border-radius: 5px;
+  border: 2px solid darkgray;
+font-family: Arial, Helvetica, sans-serif;
+}
+#show {
+padding: 5px;
+background-color: white;
+border-radius: 5px;
+  border: 2px solid darkgray;
+font-family: Arial, Helvetica, sans-serif;
+}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">
 </script>
 
 <script>
 $(document).ready(function(){
-  $("#button1").click(function(){
-    $(this).hide();
+  $("#hide").click(function(){
+    $("#myparagraph").hide();
+  });
+  $("#show").click(function(){
+    $("#myparagraph").show();
   });
 });
 </script>
@@ -150,8 +169,12 @@ $(document).ready(function(){
 <br>
 By: Kevin E Morales</p>
 </div>
-<div class="buttonn">
-<button id="button1">Click here to disappear.</button>
+<div class="p2">
+<p id= "myparagraph">Make sure that you're receiving plently of sleep!</p>
+</div>
+<div class= "buttonn">
+<button id="hide">Hide Information</button> 
+<button id="show">Show Information</button>
 </div>
 <br>
 <div class="container">
