--- a/index.html
+++ b/index.html
@@ -173,13 +173,15 @@ $(document).ready(function(){
   });
 });
 </script>
+
 <script>
 $(document).ready(function(){
   $("#toggle").click(function(){
-    $(".container").toggle();
+    $(".container").fadeToggle(1000);
   });
 });
 </script>
+
 
 </head>
 <body>
@@ -199,7 +201,7 @@ By: Kevin E Morales</p>
 </div>
 <br>
 <div class= "buttonn">
-<button id="toggle">Toggle Information</button>
+<button id="toggle">Fade Toggle</button>
 </div>
 <br>
 
