--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ width: 700px;
 margin: auto;
 width: 500px;
 }
+.p3 {
+margin: auto;
+width: 500px;
+}
 p {
 background-color: white;
 border: 2px solid darkgray;
@@ -159,6 +163,16 @@ left-margin: auto;
 right-margin: auto;
 text-align: center;
 }
+#reveal {
+padding: 5px;
+background-color: white;
+border-radius: 5px;
+  border: 2px solid darkgray;
+font-family: Arial, Helvetica, sans-serif;
+left-margin: auto;
+right-margin: auto;
+text-align: center;
+}
 </style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">
 </script>
@@ -168,7 +182,7 @@ $(document).ready(function(){
   $("#hide").click(function(){
     $("#myparagraph").hide();
   });
-  $("#show").click(function(){
+  $("#show").hover(function(){
     $("#myparagraph").show();
   });
 });
@@ -178,6 +192,13 @@ $(document).ready(function(){
 $(document).ready(function(){
   $("#toggle").click(function(){
     $(".container").fadeToggle(1000);
+  });
+});
+</script>
+<script>
+$(document).ready(function(){
+$("#reveal").click(function(){
+$("#crossfit").replaceWith("<p>Powerlifting and bodybuilding are the best!</p>");
   });
 });
 </script>
@@ -196,12 +217,12 @@ By: Kevin E Morales</p>
 <p id= "myparagraph">Make sure that you're receiving plently of sleep!</p>
 </div>
 <div class= "buttonn">
-<button id="hide">Hide Information</button> 
-<button id="show">Show Information</button>
+<button id="hide">Click To Hide Information</button> 
+<button id="show">Hover To Show Information</button>
 </div>
 <br>
 <div class= "buttonn">
-<button id="toggle">Fade Toggle</button>
+<button id="toggle">Click to Fade Toggle On and Off</button>
 </div>
 <br>
 
@@ -268,6 +289,13 @@ By: Kevin E Morales</p>
   <li>More muscle mass does not equate to being "bulky".</li>
   <li>Align your macros and stay consistent for your goals!</li>
 </ul>
+</div>
+<br>
+<div class= "buttonn">
+<button id="reveal">Click To Replace The Paragraph</button>
+</div>
+<div class="p3">
+<p id="crossfit">Personally I don't like crossfit so..</p>
 </div>
 </body>
 </html>
