--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ $(document).ready(function(){
 <script>
 $(document).ready(function(){
   $("#toggle").click(function(){
-    $(".container").fadeToggle(1000);
+    $(".image").fadeToggle(1000);
   });
 });
 </script>
@@ -221,9 +221,6 @@ By: Kevin E Morales</p>
 <button id="show">Hover To Show Information</button>
 </div>
 <br>
-<div class= "buttonn">
-<button id="toggle">Click to Fade Toggle On and Off</button>
-</div>
 <br>
 
 <div class="container">
@@ -238,12 +235,17 @@ By: Kevin E Morales</p>
  <br>
 <div class="container">
   <div> <a href="https://th.bing.com/th/id/OIP.C6jy_gVox1rUttnQyP22TQHaFO?rs=1&pid=ImgDetMain" target="_blank">
+  <div class="image">
         <img src="https://th.bing.com/th/id/OIP.C6jy_gVox1rUttnQyP22TQHaFO?rs=1&pid=ImgDetMain" alt="Image Description" />
+        </div>
     </a>
     <p>Image source: 
         <a href="https://th.bing.com/th/id/OIP.C6jy_gVox1rUttnQyP22TQHaFO?rs=1&pid=ImgDetMain" target="_blank">
             www.workingagainstgravity.com
         </a>
+        <br>
+        <br>
+        <button id="toggle">Click to Fade Toggle Image On and Off</button>
     </div>
 
  <table>
