--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ $(document).ready(function(){
 $(document).ready(function(){
   $("#toggle").click(function(){
     $(".image").fadeToggle(1000);
+    console.log(".image turns on and off");
   });
 });
 </script>
